src/test/ui/type-alias-impl-trait/declared_but_never_defined.stderr
error: could not find defining uses
  --> $DIR/declared_but_never_defined.rs:6:1
   |
LL | type Bar = impl std::fmt::Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

